--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "easy-mode",
+  "name": "easier-node",
   "version": "0.0.0",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -9,7 +9,7 @@
     "./dist/esm/index.js": "./dist/esm/index.js"
   },
   "bin": {
-    "easy-mode": "./dist/easy-mode"
+    "easier-node": "./dist/easier-node"
   },
   "scripts": {
     "help": "esr ./.scripts/help.ts",
