docs: isolated packages to include

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,7 +22,7 @@
     ".lintstagedrc.cjs": true,
     "package-lock.json": true,
     "tsconfig.json": true,
-    "LICENSE": true,
+    "LICENSE.txt": true,
     "coverage": true
   }
 }
