--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "module": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
   "license": "Apache-2.0",
+  "sideEffects": false,
   "engines": {
     "node": "^16.13.0"
   },
