--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
   "scss.validate": false,
   "files.exclude": {
     "node_modules": true,
+    // ".scripts": true,
     ".husky": true,
     ".github": true,
     ".commitlintrc.json": true,
