feat: plenty of new bits, but not ready

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,19 +10,19 @@
   "scss.validate": false,
   "files.exclude": {
     "node_modules": true,
-    // ".scripts": true,
+    ".scripts": true,
     ".husky": true,
     ".github": true,
     ".commitlintrc.json": true,
     ".editorconfig": true,
     ".eslintcache": true,
     ".prettierignore": true,
-    ".eslintrc.cjs": true,
+    // ".eslintrc.cjs": true,
     ".jestrc.cjs": true,
     ".prettierrc.cjs": true,
     ".lintstagedrc.cjs": true,
     "package-lock.json": true,
-    "tsconfig.json": true,
+    // "tsconfig.json": true,
     "LICENSE.txt": true,
     "coverage": true
   }
