--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
-    "@types/jest": "^27.4.1",
+    "@types/jest": "^28.0.0",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "enquirer": "^2.3.6",
@@ -46,10 +46,11 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-unicorn": "^42.0.0",
     "husky": "^7.0.4",
-    "jest": "^27.5.1",
+    "jest": "^28.0.0",
     "lint-staged": "^12.3.5",
     "prettier": "^2.5.1",
     "semantic-release": "^19.0.2",
+    "ts-jest": "^28.0.4",
     "typescript": "^4.6.4"
   },
   "files": [
@@ -61,8 +62,9 @@
     ]
   },
   "dependencies": {
-    "fast-glob": "^3.2.11",
-    "ignore": "^5.2.0",
-    "strip-json-comments": "^4.0.0"
+    "execa": "6.1.0",
+    "got": "12.1.0",
+    "normalize-url": "7.0.3",
+    "sucrase": "^3.21.0"
   }
 }
