--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     "strict": true,
     "skipLibCheck": true
   },
-  "include": ["typings.d.ts", "cli/**/*", "lib/**/*", ".scripts/**/*"]
+  "include": ["typings.d.ts", "cli/**/*", "lib/**/*", ".scripts/**/*", "transpile.mjs"]
 }
