--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
     "help": "xnr ./.scripts/help.ts",
     "help:name": "echo 'Rename npm project'",
     "name": "xnr ./.scripts/name.ts",
-    "help:build": "echo 'Build npm project'",
-    "build": "xnr ./.scripts/build.ts",
     "help:test": "echo 'Run tests once'",
     "test": "jest -c ./.jestrc.cjs",
     "help:coverage": "echo 'Run tests and collect coverage'",
@@ -60,10 +58,11 @@
     ]
   },
   "dependencies": {
+    "@swc-node/jest": "^1.5.2",
     "execa": "6.1.0",
     "got": "12.1.0",
     "normalize-url": "7.0.3",
     "sucrase": "^3.21.0",
-    "xnr": "^0.1.0"
+    "xnr": "^0.2.0"
   }
 }
