feat: hashing algos

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "got": "12.1.0",
     "normalize-url": "7.0.3",
     "sucrase": "^3.21.0",
-    "xnr": "^0.2.0"
+    "xnr": "^0.2.0",
+    "xxhash-wasm": "^1.0.1"
   }
 }
