--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
+    "@swc-node/jest": "^1.5.2",
     "@types/jest": "^28.0.0",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
@@ -46,8 +47,8 @@
     "lint-staged": "^12.3.5",
     "prettier": "^2.5.1",
     "semantic-release": "^19.0.2",
-    "ts-jest": "^28.0.4",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "xnr": "^0.2.0"
   },
   "files": [
     "dist"
@@ -58,12 +59,9 @@
     ]
   },
   "dependencies": {
-    "@swc-node/jest": "^1.5.2",
     "execa": "6.1.0",
     "got": "12.1.0",
     "normalize-url": "7.0.3",
-    "sucrase": "^3.21.0",
-    "xnr": "^0.2.0",
     "xxhash-wasm": "^1.0.1"
   }
 }
