--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,29 +1,7 @@
 {
   "editor.formatOnSave": true,
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true,
-    "source.fixAll.stylelint": true
-  },
   "prettier.prettierPath": "node_modules/prettier",
-  "css.validate": false,
-  "less.validate": false,
-  "scss.validate": false,
   "files.exclude": {
-    "node_modules": true,
-    ".scripts": true,
-    ".husky": true,
-    ".github": true,
-    ".commitlintrc.json": true,
-    ".editorconfig": true,
-    ".eslintcache": true,
-    ".prettierignore": true,
-    ".eslintrc.cjs": true,
-    ".jestrc.cjs": true,
-    ".prettierrc.cjs": true,
-    ".lintstagedrc.cjs": true,
-    "package-lock.json": true,
-    "tsconfig.json": true,
-    "LICENSE.txt": true,
-    "coverage": true
+    "package-lock.json": true
   }
 }
