--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "easier-node",
   "description": "Node.js, but with a modern API",
-  "version": "0.0.0",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "types": "dist/esm/index.d.ts",
+  "version": "0.0.1-alpha.0",
+  "main": "dist/index.js",
+  "exports": {
+    "import": "./dist/index.mjs",
+    "require": "./dist/index.js"
+  },
+  "types": "dist/index.d.ts",
   "license": "Apache-2.0",
   "sideEffects": false,
+  "type": "commonjs",
   "engines": {
     "node": "^16.13.0"
   },
@@ -23,6 +27,8 @@
     "coverage": "jest -c ./.jestrc.cjs --coverage",
     "help:watch": "echo 'Run tests and rerun when the code changes'",
     "watch": "jest -c ./.jestrc.cjs --watch",
+    "help:build": "echo 'Build library'",
+    "build": "xnrb ./lib/index.ts dist && tsc",
     "help:lint": "echo 'Lint all files, output to stdout'",
     "lint": "eslint lib",
     "help:types": "echo 'Typecheck all TS files, output to stdout'",
@@ -48,7 +54,7 @@
     "prettier": "^2.5.1",
     "semantic-release": "^19.0.2",
     "typescript": "^4.6.4",
-    "xnr": "^0.2.0"
+    "xnr": "0.2.1"
   },
   "files": [
     "dist"
@@ -59,8 +65,6 @@
     ]
   },
   "dependencies": {
-    "execa": "6.1.0",
-    "got": "12.1.0",
     "normalize-url": "7.0.3",
     "xxhash-wasm": "^1.0.1"
   }
