--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "easier-node",
   "description": "Node.js, but with a modern API",
-  "version": "0.0.1-alpha.0",
-  "main": "dist/index.js",
+  "version": "0.0.1-alpha.1",
   "exports": {
-    "import": "./dist/index.mjs",
-    "require": "./dist/index.js"
+    "import": "./dist/index.mjs"
   },
   "types": "dist/index.d.ts",
   "license": "Apache-2.0",
   "sideEffects": false,
-  "type": "commonjs",
+  "type": "module",
   "engines": {
     "node": "^16.13.0"
   },
