--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,9 @@
     "target": "es2017",
     "lib": ["es2021"],
     "jsx": "react",
-    "module": "commonjs",
+    "module": "ES2022",
     "moduleResolution": "node",
-    "resolveJsonModule": true,
+    "resolveJsonModule": false,
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
