--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "easier-node",
   "description": "Node.js, but with a modern API",
-  "version": "0.0.1-alpha.2",
+  "version": "0.0.1-alpha.3",
   "exports": {
     "import": "./dist/index.mjs"
   },
@@ -25,7 +25,7 @@
     "help:watch": "echo 'Run tests and rerun when the code changes'",
     "watch": "jest -c ./.jestrc.cjs --watch",
     "help:build": "echo 'Build library'",
-    "build": "xnrb ./lib/index.ts dist && tsc",
+    "build": "xnrb ./lib/index.ts dist && cp -r ./lib/assets ./dist && tsc",
     "help:lint": "echo 'Lint all files, output to stdout'",
     "lint": "eslint lib",
     "help:types": "echo 'Typecheck all TS files, output to stdout'",
