--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "easier-node",
   "description": "Node.js, but with a modern API",
-  "version": "0.0.1-alpha.10",
+  "version": "0.0.1-beta.0",
   "main": "./dist/index.mjs",
   "exports": {
     "import": "./dist/index.mjs"
